--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Datos Personales</title>
   <link rel="stylesheet" href="estilos.css">
+  <!-- Librería de EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <!-- Script propio -->
   <script src="script.js" defer></script>
 </head>
 <body>
@@ -13,21 +15,21 @@
     <h1>Datos Personales</h1>
     <form id="personalDataForm">
       <label for="firstName">Nombre:</label>
-      <input type="text" id="firstName" name="firstName" required>
+      <input type="text" id="firstName" name="firstName" placeholder="Ingresa tu nombre" required>
 
       <label for="lastName">Apellido:</label>
-      <input type="text" id="lastName" name="lastName" required>
+      <input type="text" id="lastName" name="lastName" placeholder="Ingresa tu apellido" required>
 
-      <label for="email">Correo:</label>
-      <input type="email" id="email" name="email" required>
+      <label for="email">Correo Electrónico:</label>
+      <input type="email" id="email" name="email" placeholder="Ingresa tu correo" required>
 
       <label for="phone">Teléfono:</label>
-      <input type="tel" id="phone" name="phone">
+      <input type="tel" id="phone" name="phone" placeholder="Ingresa tu número de teléfono">
 
       <label for="message">Mensaje:</label>
-      <textarea id="message" name="message"></textarea>
+      <textarea id="message" name="message" placeholder="Ingresa tu mensaje"></textarea>
 
-      <button type="submit">Enviar</button>
+      <button type="submit">Guardar</button>
     </form>
     <p id="status-message"></p>
   </div>
